k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventmanagement-api
  namespace: eventmanagement
  labels:
    app: eventmanagement-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventmanagement-api
  template:
    metadata:
      labels:
        app: eventmanagement-api
        version: v1
    spec:
      containers:
        - name: eventmanagement-api
          image: gcr.io/event-management-478313/bophieu-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          volumeMounts:
            - name: uploads-volume
              mountPath: /app/uploads
            - name: logs-volume
              mountPath: /app/logs

      volumes:
        - name: uploads-volume
          emptyDir: {}
        - name: logs-volume
          emptyDir: {}
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
