k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventmanagement-api
  namespace: eventmanagement
  labels:
    app: eventmanagement-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: eventmanagement-api
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
